add docs and simplify cli

--- a/docs/Introduction.mdx
+++ b/docs/Introduction.mdx
@@ -1,35 +1,25 @@
 import { Meta } from "@storybook/blocks";
 
 <Meta title="Introduction" />
-<style>
-  {`
-    .subheading {
-      --mediumdark: '#999999';
-      font-weight: 700;
-      font-size: 13px;
-      color: #999;
-      letter-spacing: 6px;
-      line-height: 24px;
-      text-transform: uppercase;
-      margin-bottom: 12px;
-      margin-top: 40px;
-    }
-  `}
-</style>
+<style>{``}</style>
 
 # Welcome to Joy Treasury
 
 Joy Treasury is a collection of [Joy UI](https://mui.com/joy-ui/getting-started/) blocks. It is a place to discover and explore the best Joy UI has to offer.
 
-This is not a UI component library. Instead, we offer a CLI tool to let you clone the blocks you want into your own project. You can tweak and customize them to your heart's content. The best part? you own the code!.
-
-## Usage
-
-1. Install the CLI tool globally:
-
-2. Choose a block from the sidebar on the left. You can also use the search bar at the top of the sidebar to search for a specific block.
-3.
+🗣️ This is **not** a component library. Instead, we offer a [CLI](/docs/cli--docs) tool to let you clone the blocks you want into your own project. You can tweak and customize them to your heart's content. The best part? you own the code!.
 
 ## What is a block?
 
 A block is a self-contained component that can be used in any Joy UI application. A block can be as simple as a button or as complex as an entire page.
+
+## How to use a block?
+
+There are two ways to use a block:
+
+1. Copy & paste the code into your project by open a "Docs" for the block you want to use and click on the "Copy" button.
+2. Use the [CLI](/docs/cli--docs) tool to clone the block into your project.
+
+## How to contribute?
+
+WIP - We are working on a way to let you contribute to the blocks. Stay tuned!
