--- a/stories/card-news-maldives/usage.mdx
+++ b/stories/card-news-maldives/usage.mdx
@@ -6,7 +6,7 @@ import raw from "./src/CardNewsMaldives?raw";
 ## CLI
 
 ```sh
-npx joy-treasury@latest clone CardNewsMaldives
+npx joy-treasury@latest clone card-news-maldives
 ```
 
 ## CardNewsMaldives
