--- a/stories/card-travel-spa/usage.mdx
+++ b/stories/card-travel-spa/usage.mdx
@@ -7,7 +7,7 @@ import raw2 from "./src/CardTravelSpaCover?raw";
 ## CLI
 
 ```sh
-npx joy-treasury@latest clone CardTravelSpa
+npx joy-treasury@latest clone card-travel-spa
 ```
 
 ## CardTravelSpa
