update Joy UI and apply custom font

--- a/stories/card-travel-spa/usage.mdx
+++ b/stories/card-travel-spa/usage.mdx
@@ -10,6 +10,17 @@ import raw2 from "./src/CardTravelSpaCover?raw";
 npx joy-treasury@latest clone card-travel-spa
 ```
 
+## Font
+
+```jsx
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossOrigin="" />
+<link
+  href="https://fonts.googleapis.com/css2?family=Cormorant&display=swap"
+  rel="stylesheet"
+/>
+```
+
 ## CardTravelSpa
 
 <Source code={raw} language="tsx" />
