add contributing guide

--- a/docs/Introduction.mdx
+++ b/docs/Introduction.mdx
@@ -22,4 +22,4 @@ There are two ways to use a block:
 
 ## How to contribute?
 
-WIP - We are working on a way to let you contribute to the blocks. Stay tuned!
+If you want to request a block or create one, see the [contributing guide](https://github.com/siriwatknp/joy-treasury/blob/main/CONTRIBUTING.md).
