Add documentation for the 'card-upload-document' dependencies
Co-authored-by: Siriwat K <siriwatkunaporn@gmail.com>

--- a/blocks/card-upload-document/usage.mdx
+++ b/blocks/card-upload-document/usage.mdx
@@ -3,6 +3,10 @@ import raw from "./src/CardUploadDocument?raw";
 
 <Meta title="Card/Upload/Document" />
 
+## Dependencies
+
+This block uses [react-dropzone](https://react-dropzone.js.org/) to implement the drag-and-drop experience.
+
 ## CLI
 
 ```sh
