move getRootProps to Card

--- a/blocks/card-upload-document/usage.mdx
+++ b/blocks/card-upload-document/usage.mdx
@@ -7,6 +7,8 @@ import raw from "./src/CardUploadDocument?raw";
 
 This block uses [react-dropzone](https://react-dropzone.js.org/) to implement the drag-and-drop experience.
 
+Make sure to install it in your project in order to use this block:
+
 ## CLI
 
 ```sh
